# treehouse

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Format-Script.ps1  README.en.md  README.md  env.ps1  env.sh  llm_query.py  lsp.py  model.json.example  pyproject.toml  requirements.txt  shell.py  sitecustomize.py  test.c  test_llm_query.py  test_shell.py  test_tree.py  tree.py
chrome-context-tracer/: README.md  README_CN.md  debug_apple_script.py  debug_backend_node.py  debug_coordinates.py  debug_window_detection.py  dom_inspector.py  interactive_test_simplified.py  mouse_element_detector.js  (+33 more)
context-tracer/: MANIFEST.in  README.md  README_zh.md  build.bat  build.sh  pyproject.toml
context-tracer/src/: test_ui.html
context-tracer/src/context_tracer/: container.py  nav_worker.js  source_cache.py  stmt_line_table.py  text_to_llm_context.py  tracer.py  tracer_common.py  tracer_html.py  tracer_main.py  tracer_scripts.js  tracer_styles.css  tracer_template.html  translations.json  translator.py  variable_trace.py
context-tracer/src/context_tracer/static/: test-container-reader.html
context-tracer/src/context_tracer/static/js/: ai_explainer.js  container-reader.js  tracer_scripts.js
context-tracer/src/tests/: test_container_and_translator.py  test_container_flow.py  test_new_architecture.py  test_py_tracer.py  test_source_manager.py  test_text_to_llm_context.py  test_v4_format.py
context-tracer/tests/: test_exception_propagation.js
context-tracer/tests/javascript/: container-reader-integration.test.js  container-reader.test.js  setup.js
context-tracer/tests/javascript/__fixtures__/: test-data.js
context-tracer/tests/javascript/integration/: ui-components.test.js
context-tracer/tests/javascript/unit/: ai-explainer.test.js  core-functionality.test.js  i18n.test.js  utilities.test.js
context-tracer/tests/python/unit/: test_filename_collapsing.py
debugger/: CMakeLists.txt  README.md  __init__.py  analyzable_tracer.py  call_analyzer.py  config.yaml.example  demo_analyzer.py  manual_test_generator.py  pdb_debugger.py  test_tracer.py  tracer.py  tracer_common.py  tracer_html.py  tracer_main.py  tracer_scripts.js  tracer_styles.css  unit_test_generator_decorator.py  variable_trace.py
debugger/cpp/: tracer_core.cpp
debugger/lldb/: README.md  debug_expr.sh  lldb-python.py  op_parser.py  tracer.py  tracer_main.py
debugger/lldb/ai/: __init__.py  error_handling.py  treehouse_lldb.py
debugger/lldb/ai/context/: context_collector.py  environment_probe.py
debugger/lldb/basic_program/: BUG.md  CMakeLists.txt  README.md  basic.c  basic_lib.c  basic_lib.h  basic_main.c  op_parser  op_parser.c  op_parser.py  test_arm64_asm.sh  test_entry_point.h
debugger/lldb/basic_program/arm64_asm/: branch_test.s  cond_branch_test.s
debugger/lldb/basic_program/include/: op_parser.h  op_parser_ffi.h
debugger/lldb/basic_program/so1/: basic_so1.c  basic_so1.h
debugger/lldb/basic_program/so2/: basic_so2.c  basic_so2.h
debugger/lldb/basic_program/test/: op_parser_main.c
debugger/lldb/lldb_source_tracer/: DESIGN.md  README.md  lldb_source_tracer.py
debugger/lldb/lldb_source_tracer/trace-viewer/: README.md  package.json  vite.config.js
debugger/lldb/lldb_source_tracer/trace-viewer/public/: index.html
debugger/lldb/lldb_source_tracer/trace-viewer/src/: index.css
debugger/lldb/lldb_source_tracer/trace-viewer/src/components/: App.jsx  CallGraph.jsx  CodeView.jsx  Sidebar.jsx  StatsChart.jsx  Toolbar.jsx
debugger/lldb/lldb_source_tracer/trace-viewer/src/utils/: dataLoader.js
debugger/lldb/lldb_tester/: DESIGN.md  README.md  config.json  lldb_tester.py  test_lldb_tester.sh
debugger/lldb/lldb_tester/core/: context.py  executor.py  reporter.py
debugger/lldb/lldb_tester/test_programs/: test_console.c  test_value_printing.c
debugger/lldb/lldb_tester/test_scripts/: test_console.py  test_example.py  test_symbol_trace_plugin.py  test_value_printing.py
debugger/lldb/native_context_tracer/: breakpoint_handler.py  breakpoints.py  config.py  core.py  debug_info_handler.py  event_loop.py  lldb_console.py  modules.py  node_processor.py  source_cache.py  source_statistics.py  step_handler.py  symbol_trace_plugin.py  symbols.py  tracer_main.py  tree_sitter_expr.md  tree_sitter_expr.py  utils.py
debugger/lldb/op_parser/: CMakeLists.txt  op_parser.c
debugger/lldb/op_parser/include/: op_parser.h  op_parser_ffi.h
debugger/lldb/op_parser/test/: op_parser_main.c
debugger/lldb/remote_eval/: DESIGN.md  README.md  remote_eval.py
debugger/lldb/remote_eval/front/: index.html  package.json  vite.config.js
debugger/lldb/remote_eval/front/src/: App.jsx  setupTests.js  store.js
debugger/lldb/remote_eval/front/src/components/: CodeEditorPanel.jsx  ExecutionResultPanel.jsx  ServerDialog.jsx
debugger/lldb/remote_eval/front/src/features/: codeSlice.js  historySlice.js  themeSlice.js
debugger/lldb/remote_eval/front/src/hooks/: useCodeExecution.js  useFavorites.js
debugger/lldb/tracer/: __init__.py  basic_thread_plan.py  breakpoint_handler.py  breakpoints.py  config.py  core.py  debug_info_handler.py  event_loop.py  events.py  expr_extractor.py  expr_tool.py  expr_types.py  large_amount_symbol_trace.md  libc_hooker.py  lldb_console.py  logger.py  logging.py  modules.py  node_processor.py  sb_value_printer.py  sbvalue.py  source_handler.py  source_ranges.py  source_statistics.py  source_tree.py  step_handler.py  symbol_trace_plugin.py  tree_sitter_expr.md  tree_sitter_expr.py  utils.py
debugger/lldb/tracer/libc/: abi.py  structs.py
debugger/utils/: path_utils.py
debugger/web/: service.py  test_service.py
debugger/web/static/css/: style.css
debugger/web/static/js/: app.js
debugger/web/static/js/autocomplete/: file-complete.js
debugger/web/templates/: debugger.html
native_context_tracer/op_parser_package/: MANIFEST.in  README.md  TESTING.md  pyproject.toml  setup.py
native_context_tracer/op_parser_package/src/op_parser/: BUG.md  DESIGN.md  README.md  __init__.py  op_parser.py
native_context_tracer/op_parser_package/src/op_parser/include/: op_parser_ffi.h
(+415 files in other folders)
