[project]
name = "terminal-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "levenshtein>=0.26.1",
    "markitdown>=0.0.1a3",
    "openai>=1.61.0",
    "pygments>=2.19.1",
    "pylint>=3.3.4",
    "pysocks>=1.7.1",
    "requests>=2.32.3",
    "socksio>=1.0.0",
    "tornado>=6.4.2",
    "tree-sitter-c<=0.23.4",
    "tree-sitter-cpp<=0.23.4",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter>=0.24.0",
    "watchdog>=6.0.0",
    "pre-commit>=4.1.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.8",
    "tree-sitter-go>=0.23.4",
    "tqdm>=4.67.1",
    "pip>=25.0.1",
    "prompt-toolkit>=3.0.50",
    "rich>=13.9.4",
    "python-lsp-server>=1.12.2",
    "setuptools>=75.8.2",
    "tree-sitter-bash>=0.23.3",
    "tree-sitter-java>=0.23.5",
    "python-multipart>=0.0.20",
    "jieba>=0.42.1",
    "pyyaml>=6.0.2",
    "parameterized>=0.9.0",
    "tree-sitter-typescript>=0.23.2",
    "colorama>=0.4.6",
    "Pillow>=10.3.0",
    "pywin32; sys_platform == 'win32'",
    "pyobjc; sys_platform == 'darwin'",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
