[project]
name = "treehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "levenshtein>=0.26.1",
    "markitdown>=0.0.1a3",
    "openai>=1.61.0",
    "pygments>=2.19.1; sys_platform != 'win32'",
    "pylint>=3.3.4",
    "pysocks>=1.7.1",
    "requests>=2.32.3",
    "socksio>=1.0.0",
    "tornado>=6.4.2",
    "tree-sitter-c<=0.23.4",
    "tree-sitter-cpp<=0.23.4",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter>=0.24.0",
    "watchdog>=6.0.0",
    "pre-commit>=4.1.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.8",
    "tree-sitter-go>=0.23.4",
    "tqdm>=4.67.1",
    "pip>=25.0.1",
    "prompt-toolkit>=3.0.50",
    "rich>=13.9.4",
    "python-lsp-server>=1.12.2",
    "setuptools>=75.8.2",
    "tree-sitter-bash>=0.23.3",
    "tree-sitter-java>=0.23.5",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "parameterized>=0.9.0",
    "tree-sitter-typescript>=0.23.2",
    "colorama>=0.4.6",
    "Pillow>=10.3.0",
    "pywin32; sys_platform == 'win32'",
    "pyobjc; sys_platform == 'darwin'",
    "pygments[windows-terminal]; sys_platform == 'win32'",
    "psutil>=7.0.0",
    "pyinstrument>=5.0.1",
    "pytest>=8.3.5",
    "cffi>=1.17.1",
    "swig>=4.3.1",
    "markdown>=3.8",
    "google-genai>=1.20.0",
    "graphviz>=0.21",
    "networkx>=3.5",
    "pyright>=1.1.403",
    "asyncstdlib>=3.13.1",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
    "tests/test-code-files/**",
    ".*/*",
    "debugger/*"
]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "D1",    # Missing docstring
    "D4",    # Missing docstring
    "D100",  # Missing module docstring
    "D101",  # Missing class docstring
    "D102",  # Missing function docstring
    "D103",  # Missing public function docstring
    "D105",  # Missing magic method docstring
    "D107",  # Missing __init__ docstring
]
